Metadata block: improve jump-to-media button & fix infinite loading issue
This fixes two issues, one that the edit screen would never resolve
when there was no data and another that the button would jump you
to the document sidebar but not guarantee the media section was open.

--- a/src/blocks/metadata/style.scss
+++ b/src/blocks/metadata/style.scss
@@ -40,6 +40,7 @@
 	}
 
 	.editor-styles-wrapper &__button {
+		display: block;
 		cursor: pointer;
 	}
 }
